# dify-enterprise-docbot

./: .gitignore  LICENSE  README.md  config.py  docbot.py  extract.py  ingest.py  pyproject.toml  requirements.txt  server.py  storage.py
.cursor/rules/: commit-message.mdc  doc-search.mdc  search.mdc
docs/: cli.md  cursor-agent-prompts.md  cursor-workflow.md  design-decisions.md  indexing.md  overview.md  quickstart.md  ranking.md  server.md  troubleshooting.md  version-upgrade.md
src/docbot/: __init__.py  cli.py  config.py  extract.py  ingest.py  server.py  storage.py  upgrade.py  values_diff.py
tests/: test_storage.py  test_values_diff.py
